--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -1,21 +1,37 @@
 .calendar {
   background-color: rgb(0, 113, 128);
-  button {
-    background-color: skyblue;
-    cursor: pointer;
-    height: 50px;
-    width: 200px;
-    border-radius: 10px;
-    border: 2px solid #15023a;
-    font-weight: bold;
-    font-size: large;
-    margin-top: 10px;
-    position: absolute;
-    right: 50px;
-  }
-  button:hover {
-    background-color: #15023a;
-    color: white;
+  .title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+    img {
+      height: 75px;
+      width: 75px;
+    }
+    h2 {
+      font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+      padding-left: 10px;
+      color: rgb(34, 34, 34);
+      font-size: 50px;
+    }
+    button {
+      background-color: skyblue;
+      cursor: pointer;
+      height: 50px;
+      width: 200px;
+      border-radius: 10px;
+      border: 2px solid #15023a;
+      font-weight: bold;
+      font-size: large;
+      margin-top: 10px;
+      position: absolute;
+      right: 50px;
+    }
+    button:hover {
+      background-color: #15023a;
+      color: white;
+    }
   }
   .calendar-events {
     display: flex;
@@ -54,7 +70,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        color: black;
+        color: rgb(0, 0, 0);
 
         .eventDate {
           margin-left: 170px;
@@ -63,10 +79,13 @@
           margin-left: 130px;
         }
         p {
+          font-family: Georgia, "Times New Roman", Times, serif;
           align-items: center;
-          padding-left: 50px;
+          padding-left: 100px;
           font-size: small;
-          font-weight: bolder;
+          font-weight: bold;
+          display: flex;
+          justify-content: center;
         }
       }
     }
